# GPTGO

./: README.md  index.html  package-lock.json  package.json
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  commands.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  task_manager.rs
src-tauri/src/openai/: constants.rs  engine.rs
src-tauri/src/services/: cpa.rs  custom_domain.rs  gptmail.rs  mod.rs  token.rs
