[package]
name = "gptgo"
version = "0.1.0"
description = "Codex Register 的 Tauri + Rust 重写版本"
authors = ["Codex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gptgo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "GPTGO"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rand = "0.8"
regex = "1.12"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls", "socks", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
thiserror = "2.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.18", features = ["v4", "serde"] }
